# personal-website

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/static/: styles.css
app/templates/pages/: about.html  aboutwebsite.html  contact.html  home.html  projects.html  resume.html  stats.html
app/templates/partials/: article.html  base.html  navbar.html  section.html
