[tool.poetry]
name = "personal-website"
version = "0.1.0"
description = ""
authors = ["aidoskanapyanov <aidos.kanapyanov@alumni.nu.edu.kz>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
Jinja2 = "^3.1.2"
black = "^22.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
